src/App.css
@import url('https://fonts.googleapis.com/css?family=Raleway:300,500,600');

a {
	text-overflow: ellipsis;
	overflow: hidden;
	display: inline-block;
	width: 100%;
}

#sections {
  padding-right: 10vw;	
  padding-left: 10vw;
  justify-content: center;
  /* width: 100vw; */
}
#header {
	height: 100vh; 
	background-attachment: fixed;
	background-position: center;
	opacity: .9;
	background-image: url("/images/salt.jpeg");
}
#break {
	height: 60vh; 
	background-attachment: fixed;
	background-position: center;
	visibility: visible;
	/* opacity: .9; */
}
#break2 {
	height: 30vh; 
	background-attachment: fixed;
	background-position: center;
	visibility: visible;
	/* opacity: .9; */
}
.title {
	padding-top: 40vh;
	color: white;
	font-family: 'Raleway', sans-serif;
	/* padding-left: 100px; */
}
.title h1{
	font-size: 70px;
	padding-top: 0;
	margin-top: 0;
	font-weight: 800;
	text-transform: uppercase;
	text-shadow: 5px 5px black;
}
.title h3{
	text-shadow: 2px 2px black;
	font-size: 40px;
	padding-bottom: 0;
	margin-bottom: 0;
	/* background-color: #363854; */
	text-align: center;
}

#about-me {
  display: flex;
  justify-content: center;
  padding-top: 6vh;
}
#about {
  padding-left: 5vw;
}
#experience {
  justify-content: center;
  padding-top: 6vh;
}
.experienceBox {
	background-color: #88888850;
	margin: 2vh;
	padding: 2vh;
	border-radius: 15px;
}
#portfolio {
  justify-content: center;
  padding-bottom: 5vh;
  padding-top: 6vh;
}
#contact p {
	text-align: center;
}
#contact {
	height: 100vh; 
	background-attachment: fixed;
	background-position: center;
}
#contact img {
	background-color: white;
	padding: 1vw;
	margin: 1vw;
	border-radius: 30%;
	box-shadow: 8px 8px black;
	/* box-shadow: 0 8px 10px 0 #363854, 0 8px 20px #363854; */
}
hr {
  width:100%;
}
.me {
	/* padding-top: 75px; */
	padding-top: 3vh;
}
.container {
	display: flex;
	width: 100%;
	align-items: stretch;
}
h1 {
	/* padding-top: 5%; */
	/* font-size: 30px; */
	text-align: center;
	font-family: 'Raleway', sans-serif;
	font-weight: lighter;
}
h2 {
	/* font-size: 22px; */
	text-align: left;
	font-family: 'Raleway', sans-serif;
	font-weight: lighter; 
}
h3 {
	/* font-size: 15px; */
	text-align: left;
	font-family: 'Raleway', sans-serif;
	font-weight: lighter; 
}
p {
	font-family: 'Raleway', sans-serif;
	font-weight: lighter;
	/* line-height: 1.5; */
}
li {
	font-family: 'Raleway', sans-serif;
	font-weight: lighter;
	/* line-height: 1.5; */
}


.row {
	display: flex;
	flex-wrap: wrap;
	padding: 0 4px;
}
  
/* Create four equal columns that sits next to each other */
.column {
	flex: 20%;
	max-width: 25%;
	padding: 0 4px;
}
.column img {
	margin-top: 8px;
	/* vertical-align: middle; */
	width: 100%;
}

.imgcontainer {
	position: relative;
	width: 100%;
}
.image {
	display: block;
	/* width: auto; */
	/* height: auto; */
}
  
.overlay {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	padding: 0 4px;
	height: 100%;
	/* width: 82%; */
	opacity: 0;
	transition: .5s ease;
	background-color: #363854;
}
  
.imgcontainer:hover .overlay {
	opacity: .85;
}
  
.text {
	color: white;
	font-size: 20px;
	position: absolute;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	text-align: center;
}


  
/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 800px) {
	.column {
		flex: 45%;
		max-width: 50%;
	}
	.container {
		display: inline;
	}
	#about-me {
		/* display: inline; */
		flex-wrap: wrap;
		padding-top: 8vh;
	} 
	.me {
		/* width: 220px; */
		padding-top: 0;
		padding-bottom: 1vh;
	}
	#about {
		padding-left: 0vw;
	}
}
  
  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
	.column {
		flex: 100%;
		max-width: 100%;
	}
	#break, #break2 {
		height: 0;
		visibility: hidden;
	}
	#header {
		background-color: #363854;
		background-image: url("/images/header.jpeg");
		/* background-image: none; */
	}
} 

